Support SemVer 2 packages. Fixes #75
Also upgrade to "registration4" endpoint, which includes more package versions (see #95).

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
         "DisplayUrl": "nuget.org",
         "PackageDetailsUrlFormat": "https://www.nuget.org/packages/{0}/{1}",
         "QueryUrlFormat": "https://azuresearch-usnc.nuget.org/query?prerelease=true&semVerLevel=2.0.0&q={0}",
-        "VersionsUrlFormat": "https://api.nuget.org/v3/registration3/{0}/index.json",
+        "VersionsUrlFormat": "https://api.nuget.org/v3/registration4-gz-semver2/{0}/index.json",
         "DownloadUrlFormat": "https://www.nuget.org/api/v2/package/{0}/{1}"
     }],
     "Logging": {
